# beyond-prompt-and-pray

./: .env.example  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
glassloop/: __init__.py  gms.py  protocols.py
glassloop/audit/: __init__.py  event.py  hash_chain.py  logger.py
glassloop/capstone/: __init__.py  banking_policies.py  banking_tools.py  complaint_agent.py  draft_verifier.py  manifold_entities.py  manifold_evidence.py  policy_rag.py  regulatory_guard.py  replay.py
glassloop/core/: __init__.py  action.py  agent.py  budget.py  loop.py  state.py  task.py  trajectory.py
glassloop/extraction/: __init__.py  hybrid_entities.py
glassloop/gms_backend/: __init__.py  gates.py  memory.py  plan_gate.py
notebooks/: 01_what_is_an_agent.ipynb  02_minimal_agent_loop.ipynb  03_reasoning_traces.ipynb  04_tasks_state_actions.ipynb  05_tools_as_typed_actions.ipynb  06_safe_tool_execution.ipynb  07_cost_latency_budgets.ipynb  08_planning.ipynb  09_memory.ipynb  12_runtime_governance.ipynb  13_escalation.ipynb  14_multi_agent.ipynb  15_capstone.ipynb  15_supplement_1_classify_complaint.ipynb  15_supplement_2_extract_facts.ipynb  15_supplement_3_search_policy.ipynb  15_supplement_4_flag_regulatory.ipynb  15_supplement_5_draft_response.ipynb  15_supplement_6_harness_and_gates.ipynb  15_supplement_7_reasoning_record.ipynb  15_supplement_8_typed_primitives.ipynb  15_supplement_9_doe_data_enrichment.ipynb  README.md  appendix_A_frontier.ipynb  appendix_B_framework_comparison.ipynb
(+79 files in other folders)
